# green-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
app/: __init__.py  ai_assistant.py  graph.py  knowledge.py  main.py  models.py  orchestration.py  planning.py  scenario.py  simulation.py
docs/: 10-系统成果展示海报.docx  10-绿运先锋系统成果展示海报.docx  claude-report.html  codex-report.html  demo-workflow.md  report.html  se2026-12-presentation.html  用户手册.docx  系统源代码汇总word文件.docx  软件测试报告.docx  软件测试计划书.docx  软件设计说明书.docx  软件需求规格说明书.docx  软件项目管理计划书.docx  部署指南.docx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  PlanningAssistant.test.tsx  PlanningAssistant.tsx  api.test.ts  api.ts  main.tsx  styles.css  styles.test.ts  types.ts  viteConfig.test.ts
frontend/src/test/: setup.ts
openspec/: config.yaml
openspec/changes/add-ai-planning-assistant/: design.md
openspec/changes/refresh-frontend-light-theme/: design.md  proposal.md
openspec/specs/ai-planning-assistant/: spec.md
openspec/specs/collection-route-planning/: spec.md
openspec/specs/fill-level-simulation/: spec.md
openspec/specs/frontend-light-theme/: spec.md
openspec/specs/knowledge-sharing-pool/: spec.md
openspec/specs/map-scenario-management/: spec.md
openspec/specs/multi-agent-orchestration/: spec.md
tests/: test_ai_assistant.py  test_app_configuration.py  test_domain_models.py  test_orchestration_and_api.py  test_route_planning.py  test_scenario_generation.py  test_simulation_and_knowledge.py
(+42 files in other folders)
