[project]
name = "green-agent"
version = "0.1.0"
description = "SE2026-12 green transport multi-agent route optimization system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.60",
    "networkx>=3.4",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
